--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Temperature Converter</h1>
+
+  <input type="number" class="input" />
+  <div class="btn-container">
+    <button class="ftoc"> F to C </button>
+    <button class="ctof"> C to F </button>
+  </div>
+  <div class="btn-container">
+    <!-- <button class="submit-btn"> Submit </button> -->
+    <button class="clear-btn"> Clear </button>
+  </div>
+
+  <div class="temp-area"></div>
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
